feat: Release Enterprise Hub V3 (Info Company Finder)

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
                             </svg>
                             Calcolo Tassi ed Interessi
                         </a>
+                        <a href="tools.html#global-hub">
+                            <svg class="nav-dropdown-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                            </svg>
+                            Info Company Finder
+                        </a>
                     </div>
                 </div>
                 <a href="ricerche.html" class="nav-link">Ricerche</a>
@@ -182,6 +189,26 @@
                     <p class="feature-description">
                         Strumento per il calcolo dei tassi di interesse e la verifica
                         del rispetto dei limiti nelle transazioni finanziarie.
+                    </p>
+                    <span class="feature-link">
+                        Scopri di più
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M9 18l6-6-6-6" />
+                        </svg>
+                    </span>
+                </a>
+                <a href="tools.html#global-hub" class="feature-card">
+                    <div class="feature-icon">
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Info Company Finder</h3>
+                    <p class="feature-description">
+                        Intelligence globale con accesso diretto ai registri di 27 paesi.
+                        Mappa interattiva e download report finanziari.
                     </p>
                     <span class="feature-link">
                         Scopri di più
