--- a/ricerche.html
+++ b/ricerche.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ricerca sentenze tributarie e interpelli Agenzia delle Entrate - Database giuridici integrati per professionisti fiscali.">
+    <meta name="description"
+        content="Ricerca sentenze tributarie e interpelli Agenzia delle Entrate - Database giuridici integrati per professionisti fiscali.">
     <title>Ricerche | Il Caffè Tributario</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Terminal / Secure Connection UI for Ricerche */
@@ -43,10 +46,23 @@
             border-bottom: 1px solid #30363d;
         }
 
-        .dot { width: 12px; height: 12px; border-radius: 50%; }
-        .red { background: #ff5f56; }
-        .yellow { background: #ffbd2e; }
-        .green { background: #27c93f; }
+        .dot {
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+        }
+
+        .red {
+            background: #ff5f56;
+        }
+
+        .yellow {
+            background: #ffbd2e;
+        }
+
+        .green {
+            background: #27c93f;
+        }
 
         .scan-line {
             width: 100%;
@@ -60,8 +76,13 @@
         }
 
         @keyframes scan {
-            0% { top: -100px; }
-            100% { top: 100%; }
+            0% {
+                top: -100px;
+            }
+
+            100% {
+                top: 100%;
+            }
         }
 
         .terminal-text {
@@ -70,10 +91,18 @@
             letter-spacing: 0.05em;
         }
 
-        .blink { animation: blink 1s step-end infinite; }
-        @keyframes blink { 50% { opacity: 0; } }
+        .blink {
+            animation: blink 1s step-end infinite;
+        }
+
+        @keyframes blink {
+            50% {
+                opacity: 0;
+            }
+        }
     </style>
 </head>
+
 <body>
     <!-- Header -->
     <header class="header" id="header">
@@ -110,7 +139,9 @@
             <div class="tab-content active" id="sentenze">
                 <div class="secure-terminal">
                     <div class="terminal-header">
-                        <div class="dot red"></div><div class="dot yellow"></div><div class="dot green"></div>
+                        <div class="dot red"></div>
+                        <div class="dot yellow"></div>
+                        <div class="dot green"></div>
                         <span style="font-size: 10px; margin-left: 10px;">SECURE CONNECTION: CGT_SEARCH_NODE</span>
                     </div>
                     <div class="scan-line"></div>
@@ -119,11 +150,13 @@
                             BANCA DATI GIURISPRUDENZA TRIBUTARIA<br>
                             <span style="color: #238636;">STATUS: READY FOR INPUT</span><span class="blink">_</span>
                         </p>
-                        
+
                         <!-- Native Search Form: Giustizia Tributaria -->
-                        <form action="https://bancadatigiurisprudenza.giustiziatributaria.gov.it/ricerca" method="GET" target="_blank" class="search-widget">
+                        <form action="https://bancadatigiurisprudenza.giustiziatributaria.gov.it/ricerca" method="GET"
+                            target="_blank" class="search-widget">
                             <div class="terminal-input-group">
-                                <input type="text" name="testoLibero" class="terminal-input" placeholder="Inserisci parole chiave (es. 'IVA')..." required>
+                                <input type="text" name="testoLibero" class="terminal-input"
+                                    placeholder="Inserisci parole chiave (es. 'IVA')..." required>
                             </div>
                             <div class="terminal-input-group">
                                 <select name="tipoProvvedimento" class="terminal-input" style="cursor: pointer;">
@@ -131,7 +164,8 @@
                                     <option value="1">Sentenze</option>
                                     <option value="2">Ordinanze</option>
                                 </select>
-                                <input type="text" name="annoProvvedimento" class="terminal-input" placeholder="Anno (Es. 2024)" style="max-width: 150px;">
+                                <input type="text" name="annoProvvedimento" class="terminal-input"
+                                    placeholder="Anno (Es. 2024)" style="max-width: 150px;">
                             </div>
                             <button type="submit" class="terminal-btn" style="width: 100%;">
                                 > EXECUTE_SEARCH.EXE
@@ -144,7 +178,9 @@
             <div class="tab-content" id="interpelli">
                 <div class="secure-terminal">
                     <div class="terminal-header">
-                        <div class="dot red"></div><div class="dot yellow"></div><div class="dot green"></div>
+                        <div class="dot red"></div>
+                        <div class="dot yellow"></div>
+                        <div class="dot green"></div>
                         <span style="font-size: 10px; margin-left: 10px;">DATA_CLOUD: ASSOLOMBARDA_NODE</span>
                     </div>
                     <div class="scan-line"></div>
@@ -155,9 +191,11 @@
                         </p>
 
                         <!-- Native Search Form: Assolombarda -->
-                        <form action="https://www.assolombarda.it/servizi/fisco/portale-interpelli" method="GET" target="_blank" class="search-widget">
+                        <form action="https://www.assolombarda.it/servizi/fisco/portale-interpelli" method="GET"
+                            target="_blank" class="search-widget">
                             <div class="terminal-input-group">
-                                <input type="text" name="q" class="terminal-input" placeholder="Cerca interpelli (es. 'Credito Imposta')..." required>
+                                <input type="text" name="q" class="terminal-input"
+                                    placeholder="Cerca interpelli (es. 'Credito Imposta')..." required>
                             </div>
                             <button type="submit" class="terminal-btn" style="width: 100%;">
                                 > INITIATE_QUERY.SH
@@ -170,7 +208,9 @@
     </section>
 
     <footer class="footer">
-        <div class="container"><p>&copy; 2025 Il Caffè Tributario.</p></div>
+        <div class="container">
+            <p>&copy; 2025 Il Caffè Tributario.</p>
+        </div>
     </footer>
 
     <script>
@@ -184,10 +224,11 @@
                 document.getElementById(btn.dataset.tab).classList.add('active');
             });
         });
-        document.getElementById('mobileMenuBtn').addEventListener('click', function() {
+        document.getElementById('mobileMenuBtn').addEventListener('click', function () {
             this.classList.toggle('active');
             document.querySelector('.nav').classList.toggle('active');
         });
     </script>
 </body>
+
 </html>
